<resources>
    <string name="app_name">Tscore</string>

    <!-- Information about the SMS Verification -->

    <string name="generaltab">Tscore-General</string>
    <string name="stafftab">Tscore-Staff</string>
    <string name="teachertab">Tscore-Teacher</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_sms">SmsActivity</string>
    <string name="action_logout">Logout</string>
    <string name="msg_enter_mobile">Enter your mobile number to get started!</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_email">Email</string>
    <string name="lbl_mobile">Mobile</string>
    <string name="lbl_next">NEXT</string>
    <string name="msg_sit_back">Sit back &amp; Relax! while we verify your mobile number</string>
    <string name="msg_manual_otp">(Enter the OTP below which you have received in SMS )</string>
    <string name="lbl_enter_otp">Enter OTP</string>
    <string name="lbl_submit">SUBMIT</string>

    <!-- contains string from the feedback file -->

    <string name="section_format">Hello World from section: %1$d</string>
    <string name="xxx">------------------------------------
    -------------------------------------------------------
    -------------------------------------------------------
    --------------------------------------------------------
    --------------------------------------------------------
    --------------------------------------------------------
    --------------------------------------------------------
    -----------------------------------------------</string>
    <string name="openDrawer">Open Drawer </string>
    <string name="closeDrawer">Close Drawer </string>
    <!-- contains the description of the string -->
    <string name="description">Please understand the notion of the Feedback Section.It enables us to get the
    correct and unbiased evaluation of the faculty and managemnent and this helps us in bringing out the best among the best
    and provide the most exuberant ambiance to the students</string>
    <!--  contains layout featuring strings only -->
    <string name="action_sign_in_short">Register</string>
    <string name="signup">signup</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <!-- New Strings to be used as questions in the layout of teacher questionnaire -->
    <string name="m1">Yogitha Maam(Gorai)</string>
    <string name="m2">Neha Apte </string>
    <string name="m3">Neha Lad</string>
    <string name="m4">Ruchi </string>
    <string name="m5">Neelam</string>
    <string name="m6">Bhumika</string>
    <!-- contains the questions to be asked to the teacher staff guys -->
    <string name="q1">Syllabus Covered</string>
    <string name="q2">Punctuality </string>
    <string name="q3">Subject Knowledge</string>
    <string name="q4">Teaching Methods</string>
    <string name="q5">Doubt Discussion</string>
    <string name="q6">Connectivity</string>
    <string name="q7">Punctual nature</string>
    <string name="q8">Problem Solving</string>
    <string name="q9">Helpfulness</string>
    <string name="q10">Behaviour</string>
    <string name="title_teacher_list">Teachers</string>
    <string name="title_teacher_detail">Teacher Detail</string>
    <!-- questions to be asked for generic form-->
    <string name="ques1">How would you grade the Teachers</string>
    <string name="ques2"> How Did You Find The Study Material</string>
    <string name="ques3">How Was The Coaching Infrastructure</string>
    <string name="ques4">How Innovative Were The Teachers </string>
    <string name="ques5">Ease Of Travel To The Class</string>
    <string name="ques6">Previous Years Results</string>
    <string name="ques7">Extra-Curricular Activities</string>
    <string name="ques8"> Counselling During Admission</string>
    <string name="ques9">Clear Your Doubts Sessions </string>
    <string name="ques10">How Were The Tests Conducted</string>
    <string name="ques11"> How Were The Seminars </string>
    <string name="ques12">How Were The Powerpoint Presentations</string>
    <string name="ques13">Quality of tests in regular time intervals</string>
    <string name="ques14">Syllabus coverage in tests</string>
    <string name="ques15">Test results/feedback on time</string>
    <string name="ques16">Doubt clearance after tests</string>
    <string name="ques17">Remedial classes after tests </string>
    <string name="title_activity_main2">Main2Activity</string>
</resources>