<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teachercardview"
    android:layout_width="match_parent"
    android:layout_height="600dp"
    android:layout_gravity="center"
    android:padding="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="left"
                android:layout_weight="1"
                app:srcCompat="@mipmap/ic_launcher" />


            <TextView

                android:id="@+id/staffname"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_weight="3"
                android:text="Teachers name"
                android:textColor="@color/standardblack"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/checkedTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:checkMark="?android:listChoiceIndicatorSingle"
                android:checked="false"
                android:text="SubmissionNotDone Yet"
                android:textColor="@color/standardblack" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="330dp"
            android:orientation="vertical"
            android:weightSum="1">

            <TextView
                android:id="@+id/elaborate"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="Mention the changes you would like to see "
                android:textColor="@color/standardblack" />

            <EditText
                android:id="@+id/elaborateans"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:layout_weight="0.16"
                android:hint="Any Specific Changes"
                android:imeOptions="actionDone"
                android:lineSpacingExtra="8sp"
                android:singleLine="true" />

            <Switch
                android:id="@+id/switch1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submission Status" />

            <Button
                android:id="@+id/submitbut"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="center_horizontal"
                android:background="@color/standardwhite"
                android:elevation="3dp"
                android:text="Submit" />

        </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/first_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:background="@color/standardwhite"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/q1"
                android:textColor="@color/standardblack" />

            <TextView
                android:id="@+id/b1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
            android:background="@color/standardwhite"
                android:text="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="5"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/second_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="105dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/q2"
                android:textColor="@color/standardblack" />

            <TextView
                android:id="@+id/b11"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b12"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b13"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b14"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b15"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="5"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/third_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="150dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/q3"
                android:textColor="@color/standardblack" />

            <TextView
                android:id="@+id/b21"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b22"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b23"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b24"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b25"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="5"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fourth_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="195dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/q4"
                android:textColor="@color/standardblack" />

            <TextView
                android:id="@+id/b31"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b32"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b33"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b34"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b35"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="5"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fifth_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="240dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/q5"
                android:textColor="@color/standardblack" />

            <TextView
                android:id="@+id/b41"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b42"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b43"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b44"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b45"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="5"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sixth_tv"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="285dp"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/q6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center"
                android:text="@string/q6"
                android:textColor="@color/standardblack" />

            <TextView
                android:id="@+id/b51"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="1"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b52"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="2"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b53"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="3"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b54"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="4"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/b55"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@color/standardwhite"
                android:duplicateParentState="true"
                android:text="5"
                android:textAlignment="center" />
        </LinearLayout>


    </RelativeLayout>


</android.support.v7.widget.CardView>
